--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -7,3 +7,29 @@ body, html
   -webkit-tap-highlight-color: transparent
   background: $color-background
   color: $color-text
+
+border-1px($color) {
+  position: relative;
+  &:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-top: 1px solid $color;
+    content: ' ';
+    width: 100%;
+  }
+}
+
+//解决办法
+@media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
+  .border-1px
+    &::after
+      -webkit-transform: scaleY(0.7)
+      transform: scaleY(0.7)
+
+@media (-webkit-min-device-pixel-ratio: 2),(min-device-pixel-ratio: 2)
+  .border-1px
+    &::after
+      -webkit-transform: scaleY(0.5)
+      transform: scaleY(0.5)
