--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -33,3 +33,12 @@ border-1px($color) {
     &::after
       -webkit-transform: scaleY(0.5)
       transform: scaleY(0.5)
+
+
+.clearfix:before,.clearfix:after
+  content: ""
+  display: block
+  clear: both
+
+.clearfix
+  zoom: 1
