--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -4,6 +4,7 @@ $color-background-d = #f5f5f5
 $color-highlight-background = #333
 $color-dialog-background = #666
 $color-theme = #0089dc
+$color-theme-r = #ff6002
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-theme-f = rgba(255, 255, 255, 0.2)
 $color-sub-theme = #e81919
